[package]
name = "clutch-hub-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-graphql = "7.0.9"
async-graphql-actix-web = "7.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
url = "2.5.2"
futures-util = "0.3" 
