[package]
name = "clutch-hub-api"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
async-graphql = "7.0.9"
async-graphql-actix-web = "7.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
url = "2.5.2"
futures-util = "0.3"
clap = { version = "4.5.17", features = ["derive"] }
config = "0.14.0"
dotenv = "0.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12.7", features = ["json"] }
chrono = "0.4.38"
axum = "0.7.5"
prometheus-client = "0.22.3"
lazy_static = "1.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
hex = "0.4.3"
rand = "0.8.5"
secp256k1 = { version = "0.29.1", features = ["recovery", "rand"] }
sha3 = "0.10.8"
thiserror = "1.0.63"
